# facedatabase-tools

./: CMakeLists.txt  count.cpp  evalsamples.cpp  fei.cpp  iterate.cpp  merge.cpp  show.cpp
face/: CMakeLists.txt  ar.cpp  bioid.cpp  cbcl.cpp  jaffe.cpp
lib/: CMakeLists.txt  sampleextractor.cpp  sampleextractor.h
tools/: CMakeLists.txt  count.cpp  evalsamples.cpp  merge.cpp  show.cpp  showrand.cpp
